--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aulas-vue",
   "version": "1.0.0",
   "description": "iniciando com vuejs",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "mocha -w /test/**/*js"
   },
@@ -13,7 +13,9 @@
   "author": "ju dantas",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "express": "^4.15.2",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.1"
   }
