--- a/vueproject/package.json
+++ b/vueproject/package.json
@@ -12,10 +12,25 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "vue": "^2.3.3",
+    "vue-resource": "^1.3.1",
+    "vue-router": "^2.5.3"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "css-loader": "^0.28.1",
+    "style-loader": "^0.17.0",
     "vue": "^2.3.3",
-    "vue-resource": "^1.3.1"
+    "vue-hot-reload-api": "^2.1.0",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^12.0.4",
+    "vue-resource": "^1.3.1",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
