--- a/webproject/package.json
+++ b/webproject/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "pug": "^2.0.0-rc.1",
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vue-router": "^2.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
