--- a/webproject/package.json
+++ b/webproject/package.json
@@ -24,6 +24,7 @@
     "sass-loader": "^5.0.1",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
+    "vuex": "^2.3.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   }
