--- a/webproject/package.json
+++ b/webproject/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "pug": "^2.0.0-rc.1",
     "vue": "^2.2.1",
     "vue-router": "^2.5.3"
